--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -15,29 +15,47 @@
         android:id="@+id/btn_scan_barcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_action_name"
-        android:drawableStart="@drawable/ic_action_name"
+        android:drawableLeft="@drawable/ic_menu_manage"
+        android:drawableStart="@drawable/ic_menu_manage"
         android:text="@string/scan_barcode" />
 
-    <EditText
-        android:id="@+id/edit_product_code"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_product_code"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/product_code" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/edit_product_price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/product_price" />
+        <EditText
+            android:id="@+id/edit_product_code"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/product_code" />
+    </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/edit_product_description"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_product_price"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/product_description"
-        android:inputType="textMultiLine"
-        android:lines="5" />
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/edit_product_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/product_price" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_product_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/edit_product_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/product_description"
+            android:inputType="textMultiLine"
+            android:lines="5" />
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/btn_save_product"
