--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,53 +10,66 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.br.cdr.mercadobarato.MainActivity">
 
-    <include android:id="@+id/main_bar"
-        layout="@layout/main_bar">
-    </include>
+    <include
+        android:id="@+id/main_bar"
+        layout="@layout/main_bar"></include>
 
-    <EditText
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_email"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
         android:layout_below="@+id/main_bar"
-        android:layout_alignParentStart="true"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="147dp"
-        android:id="@+id/login_field"
-        android:hint="Login" />
+        android:layout_marginTop="147dp">
 
-    <EditText
-        android:layout_width="wrap_content"
+
+        <EditText
+            android:id="@+id/login_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:ems="10"
+            android:hint="@string/login"
+            android:inputType="textEmailAddress" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_password"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/password_field"
-        android:layout_below="@+id/login_field"
-        android:layout_alignStart="@+id/login_field"
-        android:layout_marginTop="13dp"
-        android:hint="Password" />
+        android:layout_alignStart="@+id/input_layout_email"
+        android:layout_below="@+id/input_layout_email"
+        android:layout_marginTop="13dp">
+
+        <EditText
+            android:id="@+id/password_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/password"
+            android:inputType="textPassword" />
+
+    </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:text="Login"
+        android:id="@+id/button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button_login"
-        android:layout_marginTop="13dp"
-        android:layout_below="@+id/password_field"
-        android:layout_alignEnd="@+id/password_field"
-        android:layout_marginEnd="58dp" />
+        android:layout_below="@+id/input_layout_password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="@string/login" />
 
     <!-- Signup Button -->
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_signup"
-        android:layout_below="@id/button_login"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_below="@id/button_login"
         android:layout_marginBottom="24dp"
+        android:layout_marginTop="24dp"
         android:padding="12dp"
-        android:text="Create Account"/>
+        android:text="@string/create_account" />
 
 </RelativeLayout>
 
