--- a/app/src/main/res/layout/main_bar.xml
+++ b/app/src/main/res/layout/main_bar.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@mipmap/ic_launcher"
+    android:background="@drawable/action_bar_logo"
     android:textAlignment="center">
 
 
