--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,62 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.br.cdr.mercadobarato.MainActivity">
 
     <include android:id="@+id/main_bar"
         layout="@layout/main_bar">
     </include>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:layout_below="@+id/main_bar"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="147dp"
-        android:id="@+id/login_field"
-        android:hint="Login" />
-
-    <EditText
+    <com.beardedhen.androidbootstrap.BootstrapEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
+        app:roundedCorners="true"
         android:id="@+id/password_field"
+        android:layout_gravity="center_vertical|center_horizontal"
         android:layout_below="@+id/login_field"
         android:layout_alignStart="@+id/login_field"
         android:layout_marginTop="13dp"
-        android:hint="Password" />
+        android:hint="@string/password" />
 
-    <Button
-        android:text="Login"
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:text="@string/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_login"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="11dp"
+        app:bootstrapBrand="success"
+        app:bootstrapSize="lg"
+        app:buttonMode="regular"
+        android:textAlignment="center"
+        app:showOutline="false"
+        app:roundedCorners="true"
         android:layout_below="@+id/password_field"
-        android:layout_alignEnd="@+id/password_field"
-        android:layout_marginEnd="58dp" />
+        android:layout_alignEnd="@+id/password_field" />
 
     <!-- Signup Button -->
-    <android.support.v7.widget.AppCompatButton
+    <com.beardedhen.androidbootstrap.BootstrapButton
         android:id="@+id/btn_signup"
-        android:layout_below="@id/button_login"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp"
         android:padding="12dp"
-        android:text="Create Account"/>
+        android:text="@string/sing_up"
+        app:bootstrapBrand="primary"
+        app:bootstrapSize="lg"
+        app:buttonMode="regular"
+        android:textAlignment="center"
+        app:showOutline="false"
+        app:roundedCorners="true"
+        android:layout_alignBaseline="@+id/button_login"
+        android:layout_alignBottom="@+id/button_login"
+        android:layout_toStartOf="@+id/button_login"
+        android:layout_marginEnd="13dp" />
+
+    <com.beardedhen.androidbootstrap.BootstrapEditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:ems="10"
+        app:roundedCorners="true"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="61dp"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:id="@+id/login_field"
+        android:hint="Login"
+        android:layout_below="@+id/main_bar"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
+
 
