--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -15,5 +15,8 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
+    <!--chave debug Douglas-->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCU5cA7wzUw6POnaC2vCrdJSccRWj5TmIE</string>
+    <!--chave debug Rodrigo -->
+    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAbGvJJdQBX9aS5cc9Ut31Hq_FFYyyx_1Y</string>-->
 </resources>
