--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_new_product"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.br.cdr.mercadobarato.MainActivity">
+    android:orientation="vertical"
+    tools:context="com.br.cdr.mercadobarato.MainActivity"
+    android:weightSum="1">
 
     <include
         android:id="@+id/main_bar"
         layout="@layout/main_bar"></include>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        app:roundedCorners="true"
-        android:id="@+id/password_field"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_below="@+id/login_field"
-        android:layout_alignStart="@+id/login_field"
-        android:layout_marginTop="13dp"
-        android:hint="@string/password" />
+        <com.beardedhen.androidbootstrap.BootstrapEditText
+            android:id="@+id/login_field"
+            android:layout_width="300dp"
+            android:height="35dp"
+            android:layout_height="wrap_content"
+            app:bootstrapSize="md"
+            app:bootstrapBrand="info"
+            app:roundedCorners="true"
+            android:hint="@string/login"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="100dp"
+            android:layout_marginBottom="10dp" />
+
+        <com.beardedhen.androidbootstrap.BootstrapEditText
+            android:id="@+id/password_field"
+            android:layout_width="300dp"
+            android:height="35dp"
+            android:layout_height="wrap_content"
+            app:bootstrapSize="md"
+            app:bootstrapBrand="info"
+            app:roundedCorners="true"
+            android:hint="@string/password"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_below="@id/login_field"/>
 
 
-    <com.beardedhen.androidbootstrap.BootstrapButton
-        android:text="@string/login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_login"
-        android:layout_marginTop="11dp"
-        app:bootstrapBrand="success"
-        app:bootstrapSize="lg"
-        app:buttonMode="regular"
-        android:textAlignment="center"
-        app:showOutline="false"
-        app:roundedCorners="true"
-        android:layout_below="@+id/password_field"
-        android:layout_alignEnd="@+id/password_field" />
+        <!-- Signup Button -->
 
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:text="@string/login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_login"
+            android:layout_marginTop="14dp"
+            app:bootstrapBrand="success"
+            app:bootstrapSize="lg"
+            app:buttonMode="regular"
+            android:textAlignment="center"
+            app:showOutline="false"
+            app:roundedCorners="true"
+            android:layout_below="@+id/password_field"
+            android:layout_alignEnd="@+id/password_field"
+            android:layout_marginLeft="10dp"/>
 
-    <!-- Signup Button -->
-    <com.beardedhen.androidbootstrap.BootstrapButton
-        android:id="@+id/btn_signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="12dp"
-        android:text="@string/sign_up"
-        app:bootstrapBrand="primary"
-        app:bootstrapSize="lg"
-        app:buttonMode="regular"
-        android:textAlignment="center"
-        app:showOutline="false"
-        app:roundedCorners="true"
-        android:layout_alignBaseline="@+id/button_login"
-        android:layout_alignBottom="@+id/button_login"
-        android:layout_toStartOf="@+id/button_login"
-        android:layout_marginEnd="13dp" />
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:id="@+id/btn_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:text="@string/sign_up"
+            app:bootstrapBrand="primary"
+            app:bootstrapSize="lg"
+            app:buttonMode="regular"
+            android:textAlignment="center"
+            app:showOutline="false"
+            app:roundedCorners="true"
+            android:layout_alignBaseline="@+id/button_login"
+            android:layout_alignBottom="@+id/button_login"
+            android:layout_toStartOf="@+id/button_login" />
 
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        app:roundedCorners="true"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="61dp"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:id="@+id/login_field"
-        android:hint="@string/login"
-        android:layout_below="@+id/main_bar"
-        android:layout_alignParentStart="true" />
+    </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
 
 
