--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="70dp"
         android:id="@+id/name_field"
-        android:hint="Name" />
+        android:hint="@string/name" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
         android:id="@+id/password_field"
         android:layout_below="@+id/email_field"
         android:layout_alignStart="@+id/email_field"
-        android:hint="Password" />
+        android:hint="@string/password" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -53,14 +53,14 @@
         android:layout_alignStart="@+id/password_field"
         android:layout_marginTop="34dp"
         android:id="@+id/confirm_password"
-        android:hint="Confirm Password" />
+        android:hint="@string/confirm_password" />
 
     <Button
-        android:text="Register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/confirm_password"
         android:layout_alignParentEnd="true"
+        android:text="@string/register"
         android:layout_marginEnd="41dp"
         android:layout_marginTop="15dp"
         android:id="@+id/button_register" />
