--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.br.cdr.mercadobarato.Register">
+    tools:context="com.br.cdr.mercadobarato.RegisterActivity">
 
     <include android:id="@+id/main_bar"
         layout="@layout/main_bar">
     </include>
 
-    <EditText
+    <com.beardedhen.androidbootstrap.BootstrapEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
@@ -22,7 +23,7 @@
         android:id="@+id/name_field"
         android:hint="@string/name" />
 
-    <EditText
+    <com.beardedhen.androidbootstrap.BootstrapEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
@@ -33,7 +34,7 @@
         android:layout_alignStart="@+id/name_field"
         android:hint="Email" />
 
-    <EditText
+    <com.beardedhen.androidbootstrap.BootstrapEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
@@ -44,18 +45,18 @@
         android:layout_alignStart="@+id/email_field"
         android:hint="@string/password" />
 
-    <EditText
+    <com.beardedhen.androidbootstrap.BootstrapEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
         android:layout_below="@+id/password_field"
         android:layout_alignStart="@+id/password_field"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="30dp"
         android:id="@+id/confirm_password"
         android:hint="@string/confirm_password" />
 
-    <Button
+    <com.beardedhen.androidbootstrap.BootstrapButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/confirm_password"
@@ -63,6 +64,8 @@
         android:text="@string/register"
         android:layout_marginEnd="41dp"
         android:layout_marginTop="15dp"
+        app:bootstrapBrand="success"
+        app:bootstrapSize="lg"
         android:id="@+id/button_register" />
 
 
