--- a/app/src/main/res/layout/main_bar.xml
+++ b/app/src/main/res/layout/main_bar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,6 +17,5 @@
         android:paddingBottom="10dp"
         android:src="@drawable/logo"
         />
-
 
 </android.support.v7.widget.Toolbar>
