--- a/app/src/main/res/values-pt-rBR/strings-PT-BR.xml
+++ b/app/src/main/res/values-pt-rBR/strings-PT-BR.xml
@@ -11,7 +11,7 @@
     <string name="title_activity_navigation_menu">NavigationMenuActivity</string>
 
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configurações</string>
     <string name="login">Login</string>
     <string name="sign_up">Cadastro</string>
     <string name="password">Senha</string>
@@ -20,4 +20,7 @@
     <string name="confirm_password">Confirmar Senha</string>
     <string name="register">Cadastrar</string>
     <string name="userLoc">Você está aqui!</string>
+    <string name="perfil">Perfil</string>
+
+
 </resources>
