Parser JSON mapa plotando, organizacao estrutura do projeto, navegacao do menu

--- a/app/src/main/res/layout/activity_add_product_shopping_list.xml
+++ b/app/src/main/res/layout/activity_add_product_shopping_list.xml
@@ -6,7 +6,7 @@ android:id="@+id/activity_add_product_ship_list"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
-tools:context="com.br.cdr.mercadobarato.AddProductShoppingListActivity"
+tools:context="com.br.cdr.mercadobarato.activity.AddProductShoppingListActivity"
 android:weightSum="1">
 
 <include
