--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.br.cdr.mercadobarato.MainActivity"
+    tools:context="com.br.cdr.mercadobarato.activity.MainActivity"
     android:weightSum="1">
 
     <include
