--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_weight="60"
         android:layout_height="0dp"
-        tools:context="com.br.cdr.mercadobarato.MapsActivity" />
+        tools:context="com.br.cdr.mercadobarato.activity.MapsActivity" />
 
     <RelativeLayout
         android:layout_width="match_parent"
