--- a/app/src/main/res/layout/app_bar_navigation_menu.xml
+++ b/app/src/main/res/layout/app_bar_navigation_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.br.cdr.mercadobarato.NavigationMenuActivity">
+    tools:context="com.br.cdr.mercadobarato.activity.NavigationMenuActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
