--- a/app/src/main/res/menu/activity_navigation_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_menu_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/list_menu"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/listMenu" />
+                android:title="@string/listMenu" />
         <item
             android:id="@+id/add_products_menu"
             android:icon="@drawable/ic_menu_slideshow"
@@ -19,6 +19,12 @@
             android:id="@+id/profile_menu"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/productPrice" />
+
+        <item
+            android:id="@+id/exit_menu"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="@string/exit" />
+
 
     </group>
 
