--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,9 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <!--<include-->
-        <!--android:id="@+id/main_bar"-->
-        <!--layout="@layout/main_bar"></include>-->
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -25,17 +22,33 @@
         android:layout_height="0dp"
         android:background="@color/bootstrap_brand_secondary_fill">
 
-        <com.beardedhen.androidbootstrap.BootstrapEditText
-            android:layout_width="300dp"
-            android:height="35dp"
+        <com.crystal.crystalrangeseekbar.widgets.CrystalSeekbar
+            android:id="@+id/rangeSeekbar1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/textMin1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:bootstrapSize="md"
-            app:bootstrapBrand="info"
-            app:roundedCorners="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            android:id="@+id/checkin_place_name" />
+            android:text="0"
+            android:layout_below="@id/rangeSeekbar1"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
+            android:textSize="16dp"
+            android:textColor="#000"/>
+
+        <TextView
+            android:id="@+id/textMax1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="25"
+            android:layout_below="@id/rangeSeekbar1"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:textSize="16dp"
+            android:textColor="#000"
+            android:layout_alignParentRight="true"/>
 
         <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/btn_checkin"
@@ -49,7 +62,7 @@
             android:textAlignment="center"
             app:showOutline="false"
             app:roundedCorners="true"
-            android:layout_below="@+id/checkin_place_name"
+            android:layout_below="@+id/textMax1"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
