--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
             app:bootstrapSize="md"
             app:bootstrapBrand="info"
             app:roundedCorners="true"
+            android:inputType="textWebPassword"
             android:hint="@string/password"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
