limpando layout's e registrando usuário

--- a/app/src/main/res/layout/activity_list_products.xml
+++ b/app/src/main/res/layout/activity_list_products.xml
@@ -7,11 +7,14 @@
     android:layout_height="match_parent"
     tools:context="com.br.cdr.mercadobarato.activity.ListProductsActivity">
 
-    <include android:id="@+id/main_bar"
-        layout="@layout/main_bar">
-    </include>
+    <!--<include android:id="@+id/main_bar"-->
+        <!--layout="@layout/main_bar">-->
+    <!--</include>-->
 
-
+<ListView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/list_view_products"/>
 
 
 </RelativeLayout>
