--- a/app/src/main/res/layout/activity_add_product_shopping_list.xml
+++ b/app/src/main/res/layout/activity_add_product_shopping_list.xml
@@ -1,77 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:id="@+id/activity_add_product_ship_list"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-tools:context="com.br.cdr.mercadobarato.activity.AddProductShoppingListActivity"
-android:weightSum="1">
-
-<include
-    android:id="@+id/main_bar"
-    layout="@layout/main_bar"></include>
-
-<RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_add_product_ship_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="1"
+    tools:context="com.br.cdr.mercadobarato.activity.AddProductShoppingListActivity">
+    
 
-    <com.beardedhen.androidbootstrap.BootstrapButton
-        android:id="@+id/btn_scan_barcode"
-        android:layout_width="178dp"
-        android:layout_height="46dp"
-        android:text="@string/scan_barcode"
-        app:bootstrapBrand="success"
-        app:bootstrapSize="lg"
-        app:buttonMode="regular"
-        app:roundedCorners="true"
-        android:layout_marginTop="15dp"
-        android:layout_centerHorizontal="true"
-        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-        android:id="@+id/edit_product_code"
-        android:layout_width="300dp"
-        android:height="35dp"
-        android:layout_height="wrap_content"
-        app:bootstrapSize="md"
-        app:bootstrapBrand="info"
-        app:roundedCorners="true"
-        android:hint="@string/product_code"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/btn_scan_barcode"/>
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:id="@+id/btn_scan_barcode"
+            android:layout_width="178dp"
+            android:layout_height="46dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:text="@string/scan_barcode"
+            app:bootstrapBrand="success"
+            app:bootstrapSize="lg"
+            app:buttonMode="regular"
+            app:roundedCorners="true" />
 
-
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-        android:id="@+id/edit_product_description"
-        android:layout_width="300dp"
-        android:height="100dp"
-        android:layout_height="wrap_content"
-        app:bootstrapSize="md"
-        app:bootstrapBrand="info"
-        app:roundedCorners="true"
-        android:hint="@string/product_description"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/edit_product_code" />
+        <com.beardedhen.androidbootstrap.BootstrapEditText
+            android:id="@+id/edit_product_code"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_scan_barcode"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            android:height="35dp"
+            android:hint="@string/product_code"
+            app:bootstrapBrand="info"
+            app:bootstrapSize="md"
+            app:roundedCorners="true" />
 
 
-    <com.beardedhen.androidbootstrap.BootstrapButton
-        android:id="@+id/btn_save_product"
-        android:layout_width="178dp"
-        android:layout_height="70dp"
-        android:text="@string/add_product_cart"
-        app:bootstrapBrand="primary"
-        app:bootstrapSize="lg"
-        app:buttonMode="regular"
-        app:roundedCorners="true"
-        android:layout_marginTop="15dp"
-        android:layout_alignEnd="@id/edit_product_description"
-        android:layout_below="@id/edit_product_description"
-        android:layout_alignStart="@+id/edit_product_description" />
-</RelativeLayout>
+        <com.beardedhen.androidbootstrap.BootstrapEditText
+            android:id="@+id/edit_product_description"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/edit_product_code"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            android:height="100dp"
+            android:hint="@string/product_description"
+            app:bootstrapBrand="info"
+            app:bootstrapSize="md"
+            app:roundedCorners="true" />
+
+
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:id="@+id/btn_save_product"
+            android:layout_width="178dp"
+            android:layout_height="70dp"
+            android:layout_alignEnd="@id/edit_product_description"
+            android:layout_alignStart="@+id/edit_product_description"
+            android:layout_below="@id/edit_product_description"
+            android:layout_marginTop="15dp"
+            android:text="@string/add_product_cart"
+            app:bootstrapBrand="primary"
+            app:bootstrapSize="lg"
+            app:buttonMode="regular"
+            app:roundedCorners="true" />
+    </RelativeLayout>
 </LinearLayout>
