--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,57 +2,55 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
-    <include
-        android:id="@+id/main_bar"
-        layout="@layout/main_bar"></include>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:orientation="horizontal"
-        android:layout_weight="1" >
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/button_products"
             android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:src="@drawable/grocery_home_icon"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:src="@drawable/grocery_home_icon" />
 
         <ImageButton
             android:id="@+id/button_cart"
             android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:src="@drawable/cart_home_icon"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:src="@drawable/cart_home_icon" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:orientation="horizontal"
-        android:layout_weight="1" >
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/button_listProducts"
             android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:src="@drawable/list_icon"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:src="@drawable/list_icon" />
 
         <ImageButton
             android:id="@+id/app_info"
             android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:src="@drawable/app_info_icon"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:src="@drawable/app_info_icon" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp"></LinearLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1"></LinearLayout>
 
 
 </LinearLayout>
