--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_new_product"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.br.cdr.mercadobarato.activity.MainActivity"
-    android:weightSum="1">
+    android:weightSum="1"
+    tools:context="com.br.cdr.mercadobarato.activity.MainActivity">
 
     <include
         android:id="@+id/main_bar"
-        layout="@layout/main_bar"/>
+        layout="@layout/main_bar" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,65 +20,66 @@
         <com.beardedhen.androidbootstrap.BootstrapEditText
             android:id="@+id/login_field"
             android:layout_width="300dp"
-            android:height="35dp"
             android:layout_height="wrap_content"
-            app:bootstrapSize="md"
-            app:bootstrapBrand="info"
-            app:roundedCorners="true"
-            android:hint="@string/login"
             android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="100dp"
-            android:layout_marginBottom="10dp" />
+            android:height="35dp"
+            android:hint="@string/login"
+            android:inputType="textPersonName"
+            app:bootstrapBrand="info"
+            app:bootstrapSize="md"
+            app:roundedCorners="true" />
 
         <com.beardedhen.androidbootstrap.BootstrapEditText
             android:id="@+id/password_field"
             android:layout_width="300dp"
-            android:height="35dp"
             android:layout_height="wrap_content"
-            app:bootstrapSize="md"
-            app:bootstrapBrand="info"
-            app:roundedCorners="true"
-            android:inputType="textWebPassword"
-            android:hint="@string/password"
+            android:layout_below="@id/login_field"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_below="@id/login_field"/>
+            android:layout_marginTop="10dp"
+            android:height="35dp"
+            android:hint="@string/password"
+            android:inputType="textWebPassword"
+            app:bootstrapBrand="info"
+            app:bootstrapSize="md"
+            app:roundedCorners="true" />
 
 
         <!-- Signup Button -->
 
         <com.beardedhen.androidbootstrap.BootstrapButton
-            android:text="@string/login"
+            android:id="@+id/button_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button_login"
+            android:layout_alignEnd="@+id/password_field"
+            android:layout_below="@+id/password_field"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="14dp"
+            android:text="@string/login"
+            android:textAlignment="center"
             app:bootstrapBrand="success"
             app:bootstrapSize="lg"
             app:buttonMode="regular"
-            android:textAlignment="center"
-            app:showOutline="false"
             app:roundedCorners="true"
-            android:layout_below="@+id/password_field"
-            android:layout_alignEnd="@+id/password_field"
-            android:layout_marginLeft="10dp"/>
+            app:showOutline="false" />
 
         <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/btn_signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/button_login"
+            android:layout_alignBottom="@+id/button_login"
+            android:layout_toStartOf="@+id/button_login"
             android:padding="12dp"
             android:text="@string/sign_up"
+            android:textAlignment="center"
             app:bootstrapBrand="primary"
             app:bootstrapSize="lg"
             app:buttonMode="regular"
-            android:textAlignment="center"
-            app:showOutline="false"
             app:roundedCorners="true"
-            android:layout_alignBaseline="@+id/button_login"
-            android:layout_alignBottom="@+id/button_login"
-            android:layout_toStartOf="@+id/button_login" />
+            app:showOutline="false" />
 
     </RelativeLayout>
 
