--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
@@ -12,58 +12,58 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_weight="60"
         android:layout_height="0dp"
+        android:layout_weight="60"
         tools:context="com.br.cdr.mercadobarato.activity.MapsActivity" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_weight="20"
         android:layout_height="0dp"
+        android:layout_weight="20"
         android:background="@color/bootstrap_brand_secondary_fill">
 
         <com.crystal.crystalrangeseekbar.widgets.CrystalSeekbar
             android:id="@+id/rangeSeekbar1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textMin1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"
             android:layout_below="@id/rangeSeekbar1"
-            android:layout_marginTop="5dp"
             android:layout_marginStart="10dp"
-            android:textSize="16dp"
-            android:textColor="#000"/>
+            android:layout_marginTop="5dp"
+            android:text="0"
+            android:textColor="#000"
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/textMax1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="25"
+            android:layout_alignParentRight="true"
             android:layout_below="@id/rangeSeekbar1"
-            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
-            android:textSize="16dp"
+            android:layout_marginTop="5dp"
+            android:text="25"
             android:textColor="#000"
-            android:layout_alignParentRight="true"/>
+            android:textSize="16dp" />
 
         <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/btn_checkin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/textMax1"
+            android:layout_centerHorizontal="true"
             android:padding="24dp"
             android:text="@string/checkin"
+            android:textAlignment="center"
             app:bootstrapBrand="success"
             app:bootstrapSize="lg"
             app:buttonMode="regular"
-            android:textAlignment="center"
-            app:showOutline="false"
             app:roundedCorners="true"
-            android:layout_below="@+id/textMax1"
-            android:layout_centerHorizontal="true" />
+            app:showOutline="false" />
     </RelativeLayout>
 
 </LinearLayout>
