--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/main_bar"
-        layout="@layout/main_bar"/>
+        layout="@layout/main_bar" />
 
 
     <com.beardedhen.androidbootstrap.BootstrapEditText
@@ -18,7 +18,8 @@
         android:layout_height="35dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/main_bar"
-        android:layout_marginStart="55dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="70dp"
         android:ems="10"
         android:hint="@string/name"
@@ -32,7 +33,8 @@
         android:layout_height="35dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/name_field"
-        android:layout_marginStart="55dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="21dp"
         android:ems="10"
         android:hint="@string/username"
@@ -45,9 +47,10 @@
         android:layout_height="35dp"
         android:layout_alignStart="@+id/username_field_register"
         android:layout_below="@+id/username_field_register"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         app:roundedCorners="true" />
 
@@ -57,6 +60,7 @@
         android:layout_height="35dp"
         android:layout_alignStart="@+id/email_field"
         android:layout_below="@+id/email_field"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="@string/password"
@@ -69,6 +73,7 @@
         android:layout_height="35dp"
         android:layout_alignStart="@+id/password_field_register"
         android:layout_below="@+id/password_field_register"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:ems="10"
         android:hint="@string/confirm_password"
