--- a/app/src/main/res/layout/main_bar.xml
+++ b/app/src/main/res/layout/main_bar.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/azul_logo"
     android:textAlignment="center">
 
@@ -11,11 +10,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:paddingBottom="10dp"
         android:paddingLeft="75dp"
         android:paddingRight="75dp"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:src="@drawable/logo"
-        />
+        android:src="@drawable/logo" />
 
 </android.support.v7.widget.Toolbar>
