--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -34,7 +34,7 @@
             android:layout_below="@id/rangeSeekbar1"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:text="0"
+            android:text="1"
             android:textColor="#000"
             android:textSize="16dp" />
 
@@ -57,7 +57,7 @@
             android:layout_below="@+id/textMax1"
             android:layout_centerHorizontal="true"
             android:padding="24dp"
-            android:text="@string/checkin"
+            android:text="@string/search"
             android:textAlignment="center"
             app:bootstrapBrand="success"
             app:bootstrapSize="lg"
